# stratum

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/stratum-cli/: Cargo.toml
crates/stratum-consensus/: Cargo.toml
crates/stratum-core/: Cargo.toml
crates/stratum-core/src/: hash.rs  key.rs  lib.rs  transaction.rs  utils.rs
crates/stratum-explorer/: Cargo.toml
crates/stratum-mempool/: Cargo.toml
crates/stratum-network/: Cargo.toml
crates/stratum-node/: Cargo.toml
crates/stratum-rpc/: Cargo.toml
crates/stratum-state/: Cargo.toml
crates/stratum-vm/: Cargo.toml
